tests/NormalTests/paczka1/fuzzy1/41251367.err
Error in line 2: Co1Q A149 33,9
Error in line 15: ed6UeN5 S793 50,0
Error in line 5: EB4K A149 59,1
Error in line 19: EB4K S793 37,8
Error in line 23: EB4K S877 56,9
Error in line 26: Co1Q A149 78,9
Error in line 29: Co1Q S793 201,0
